[gd_scene load_steps=27 format=4 uid="uid://t8gnnnnafxrt"]

[ext_resource type="Script" uid="uid://bpyb6q4fqv2pe" path="res://game/map/scripts/map_script.gd" id="1_ox8e6"]
[ext_resource type="Script" uid="uid://d1vl0qjs1jp70" path="res://game/map/scripts/game_controller_script.gd" id="2_4i2x0"]
[ext_resource type="Script" uid="uid://xt1737ecqrv3" path="res://game/map/scripts/player_factory_script.gd" id="13_dbs7f"]
[ext_resource type="Script" uid="uid://defy7uywjpo1o" path="res://game/map/scripts/enemy_factory_script.gd" id="14_4i2x0"]
[ext_resource type="PackedScene" uid="uid://cstl2ayt7m6j7" path="res://character/character_base/character.tscn" id="14_gym5g"]
[ext_resource type="Texture2D" uid="uid://c7schihijg0cg" path="res://art_assets/tileMaps/Isometric/stone_E.png" id="14_hn146"]
[ext_resource type="Resource" uid="uid://fllksp7jcdun" path="res://enemy/enemy_resource/gnome_resource.tres" id="15_06qla"]
[ext_resource type="Texture2D" uid="uid://dfgiee18ejk2c" path="res://art_assets/tileMaps/Isometric/stone_N.png" id="15_7mm3l"]
[ext_resource type="Script" uid="uid://djv5m3j1vsoyq" path="res://game/map/scripts/projectile_factory_script.gd" id="15_cwx5i"]
[ext_resource type="PackedScene" uid="uid://unbutrohoar4" path="res://enemy/enemy_base/enemy_base.tscn" id="15_wdkll"]
[ext_resource type="Resource" uid="uid://cuhd82vh2wq7w" path="res://enemy/enemy_resource/skeleton_resource.tres" id="16_m1bfk"]
[ext_resource type="Texture2D" uid="uid://b6w0apb1nnssk" path="res://art_assets/tileMaps/Isometric/stone_S.png" id="16_mcxvb"]
[ext_resource type="Texture2D" uid="uid://bd3oslg8ac2lp" path="res://art_assets/tileMaps/Isometric/stone_W.png" id="17_lfrb8"]
[ext_resource type="PackedScene" uid="uid://dapn64f43ptua" path="res://character/castle/castle_scene.tscn" id="20_m1bfk"]
[ext_resource type="Script" uid="uid://cui3lc01fyvrn" path="res://game/map/scripts/upgrade_pool_script.gd" id="23_841mk"]
[ext_resource type="PackedScene" uid="uid://bsb0vvqcymr7n" path="res://game/levelUpScene/levelUpScene.tscn" id="23_dbs7f"]
[ext_resource type="Resource" uid="uid://cs0s805vqcyf3" path="res://character/character_resources/playerModStats/hp_increase_mod_stat_resource.tres" id="24_ao0ru"]
[ext_resource type="Resource" uid="uid://b2wlniktxxtcv" path="res://character/character_resources/playerModStats/size_mod_resource.tres" id="26_16fx3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7mm3l"]
texture = ExtResource("14_hn146")
texture_region_size = Vector2i(256, 128)
0:2/size_in_atlas = Vector2i(1, 2)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, 45)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tnhpn"]
texture = ExtResource("15_7mm3l")
texture_region_size = Vector2i(256, 128)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_81af2"]
texture = ExtResource("16_mcxvb")
texture_region_size = Vector2i(256, 128)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m78bm"]
texture = ExtResource("17_lfrb8")
texture_region_size = Vector2i(256, 128)
0:2/size_in_atlas = Vector2i(1, 2)
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, 45)
0:2/0/terrain_set = 0
0:2/0/terrain = 1
0:2/0/terrains_peering_bit/bottom_right_side = 1
0:2/0/terrains_peering_bit/bottom_left_side = 1
0:2/0/terrains_peering_bit/top_left_side = 1
0:2/0/terrains_peering_bit/top_right_side = 1

[sub_resource type="TileSet" id="TileSet_n4nhq"]
tile_shape = 1
tile_offset_axis = 1
tile_size = Vector2i(256, 128)
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
terrain_set_0/terrain_1/name = "Terrain 1"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_7mm3l")
sources/1 = SubResource("TileSetAtlasSource_tnhpn")
sources/2 = SubResource("TileSetAtlasSource_81af2")
sources/3 = SubResource("TileSetAtlasSource_m78bm")

[sub_resource type="NavigationPolygon" id="NavigationPolygon_8fugj"]
vertices = PackedVector2Array(-54.523438, 979.3906, -221.63281, 1152.2969, -392.79688, 1048.3125, -139.49219, 562.3125, 34.75, 867.0625, 210.57813, 714.3281, 35.609375, 326.85938, 490.15625, 488.85938, 265.14844, 211.10156, 508.45313, 108.8125, 968.28906, 185.57813, 863.8828, 76.140625, 943.8828, 101.890625)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(5, 4, 3, 6), PackedInt32Array(7, 5, 6, 8, 9), PackedInt32Array(10, 7, 9, 11, 12)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-406, 1052, -148, 557, 29, 319, 261, 202, 506, 99, 865, 66, 952, 94, 980, 190, 496, 497, 217, 722, 42, 874, -47, 986, -220, 1165)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_6opfo"]
vertices = PackedVector2Array(1384.1406, 403.64063, 1176.5625, 324.64844, 898.28125, 215.28906, 901.65625, 132.35156, 1141.6484, 86.859375, 1249.75, 71.140625, 1404.0625, 101.609375, 1607.7422, 188.20313, 1829.5703, 468.71875, 1724.4922, 729.3203, 1543.9063, 606.6094, 2126.7188, 756.8672, 1972.5625, 987.4297, 2294.3672, 951.65625, 2181.3281, 1115.1406, 2057.4375, 1095.7188)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7, 8), PackedInt32Array(9, 10, 0, 8, 11), PackedInt32Array(12, 9, 11, 13, 14), PackedInt32Array(12, 14, 15)])
outlines = Array[PackedVector2Array]([PackedVector2Array(2186, 1126, 2307, 951, 2134, 750, 1837, 462, 1614, 180, 1407, 92, 1250, 61, 1140, 77, 892, 124, 888, 222, 1173, 334, 1378, 412, 1537, 614, 1718, 737, 1965, 994, 2052, 1105)])

[sub_resource type="CircleShape2D" id="CircleShape2D_16fx3"]
radius = 100.005

[node name="Map" type="Node2D"]
script = ExtResource("1_ox8e6")

[node name="tileMaps" type="Node2D" parent="."]

[node name="dirtTiles" type="TileMapLayer" parent="tileMaps"]
y_sort_enabled = true
texture_filter = 1
texture_repeat = 1
tile_map_data = PackedByteArray("AAABAAMAAAAAAAIAAAACAAQAAAAAAAIAAAADAAMAAAAAAAIAAAACAAMAAAAAAAIAAAABAAIAAAAAAAIAAAAAAAMAAAAAAAIAAAACAAUAAAAAAAIAAAADAAQAAAAAAAIAAAADAAUAAAAAAAIAAAAEAAMAAAAAAAIAAAAEAAQAAAAAAAIAAAAEAAUAAAAAAAIAAAAFAAUAAAAAAAIAAAAGAAUAAAAAAAIAAAAFAAQAAAAAAAIAAAAGAAQAAAAAAAIAAAAFAAMAAAAAAAIAAAADAAIAAAAAAAIAAAACAAIAAAAAAAIAAAABAAQAAAAAAAIAAAAAAAQAAAAAAAIAAAD//wMAAAAAAAIAAAAEAAYAAAAAAAIAAAAHAAQAAAAAAAIAAAAFAAYAAAAAAAIAAAAGAAYAAAAAAAIAAAAHAAUAAAAAAAIAAAAHAAYAAAAAAAIAAAAIAAUAAAAAAAIAAAAIAAYAAAAAAAIAAAAGAAcAAAAAAAIAAAAJAAUAAAAAAAIAAAADAAEAAAAAAAIAAAAEAAEAAAAAAAIAAAAEAAIAAAAAAAIAAAAFAAEAAAAAAAIAAAAFAAIAAAAAAAIAAAAGAAEAAAAAAAIAAAAGAAIAAAAAAAIAAAAGAAMAAAAAAAIAAAAHAAEAAAAAAAIAAAAHAAIAAAAAAAIAAAAHAAMAAAAAAAIAAAAIAAEAAAAAAAIAAAAIAAIAAAAAAAIAAAAIAAMAAAAAAAIAAAAIAAQAAAAAAAIAAAAJAAEAAAAAAAIAAAAJAAIAAAAAAAIAAAAJAAMAAAAAAAIAAAAJAAQAAAAAAAIAAAAKAAEAAAAAAAIAAAAKAAIAAAAAAAIAAAAKAAMAAAAAAAIAAAAKAAQAAAAAAAIAAAAKAAUAAAAAAAIAAAAHAAcAAAAAAAIAAAAIAAcAAAAAAAIAAAAJAAYAAAAAAAIAAAAJAAcAAAAAAAIAAAAKAAYAAAAAAAIAAAAKAAcAAAAAAAIAAAALAAIAAAAAAAIAAAALAAMAAAAAAAIAAAALAAQAAAAAAAIAAAALAAUAAAAAAAIAAAALAAYAAAAAAAIAAAALAAcAAAAAAAIAAAAMAAIAAAAAAAIAAAAMAAMAAAAAAAIAAAAMAAQAAAAAAAIAAAAMAAUAAAAAAAIAAAAMAAYAAAAAAAIAAAAMAAcAAAAAAAIAAAD+/wAAAAAAAAIAAAD+/wEAAAAAAAIAAAD+/wIAAAAAAAIAAAD+/wMAAAAAAAIAAAD//wAAAAAAAAIAAAD//wEAAAAAAAIAAAD//wIAAAAAAAIAAAAAAAAAAAAAAAIAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAIAAAABAAAAAAAAAAIAAAABAAEAAAAAAAIAAAACAAAAAAAAAAIAAAACAAEAAAAAAAIAAAADAAAAAAAAAAIAAAAEAAAAAAAAAAIAAAAFAAAAAAAAAAIAAAAEAP//AAAAAAIAAAAFAP//AAAAAAIAAAAGAP//AAAAAAIAAAAGAAAAAAAAAAIAAAAHAP//AAAAAAIAAAAHAAAAAAAAAAIAAAAIAP//AAAAAAIAAAAIAAAAAAAAAAIAAAAJAP//AAAAAAIAAAAJAAAAAAAAAAIAAAAKAP//AAAAAAIAAAAKAAAAAAAAAAIAAAALAP//AAAAAAIAAAALAAAAAAAAAAIAAAALAAEAAAAAAAIAAAAMAP//AAAAAAIAAAAMAAAAAAAAAAIAAAAMAAEAAAAAAAIAAAANAP//AAAAAAIAAAANAAAAAAAAAAIAAAANAAEAAAAAAAIAAAANAAIAAAAAAAIAAAANAAMAAAAAAAIAAAANAAQAAAAAAAIAAAANAAUAAAAAAAIAAAAOAP//AAAAAAIAAAAOAAAAAAAAAAIAAAAOAAEAAAAAAAIAAAAOAAIAAAAAAAIAAAAOAAMAAAAAAAIAAAAOAAQAAAAAAAIAAAAOAAUAAAAAAAIAAAAPAP//AAAAAAIAAAAPAAAAAAAAAAIAAAAPAAEAAAAAAAIAAAAPAAIAAAAAAAIAAAAPAAMAAAAAAAIAAAAPAAQAAAAAAAIAAAAPAAUAAAAAAAIAAAADAP//AAAAAAIAAAACAP//AAAAAAIAAAABAP//AAAAAAIAAAAAAP//AAAAAAIAAAD9/wMAAAAAAAIAAAD9/wQAAAAAAAIAAAD9/wUAAAAAAAIAAAD9/wYAAAAAAAIAAAD9/wcAAAAAAAIAAAD9/wgAAAAAAAIAAAD+/wQAAAAAAAIAAAD+/wUAAAAAAAIAAAD+/wYAAAAAAAIAAAD+/wcAAAAAAAIAAAD+/wgAAAAAAAIAAAD//wQAAAAAAAIAAAD//wUAAAAAAAIAAAD//wYAAAAAAAIAAAD//wcAAAAAAAIAAAD//wgAAAAAAAIAAAAAAAUAAAAAAAIAAAAAAAYAAAAAAAIAAAAAAAcAAAAAAAIAAAAAAAgAAAAAAAIAAAABAAUAAAAAAAIAAAABAAYAAAAAAAIAAAABAAcAAAAAAAIAAAABAAgAAAAAAAIAAAACAAYAAAAAAAIAAAACAAcAAAAAAAIAAAACAAgAAAAAAAIAAAADAAYAAAAAAAIAAAADAAcAAAAAAAIAAAADAAgAAAAAAAIAAAAEAAcAAAAAAAIAAAAEAAgAAAAAAAIAAAAFAAcAAAAAAAIAAAAFAAgAAAAAAAIAAAAGAAgAAAAAAAIAAAAHAAgAAAAAAAIAAAAIAAgAAAAAAAIAAAAJAAgAAAAAAAIAAAAKAAgAAAAAAAIAAAALAAgAAAAAAAIAAAAMAAgAAAAAAAIAAAANAAYAAAAAAAIAAAANAAcAAAAAAAIAAAANAAgAAAAAAAIAAAAOAAYAAAAAAAIAAAAOAAcAAAAAAAIAAAAOAAgAAAAAAAIAAAAPAAYAAAAAAAIAAAAPAAcAAAAAAAIAAAAPAAgAAAAAAAIAAAAQAAUAAAAAAAIAAAAQAAYAAAAAAAIAAAAQAAcAAAAAAAIAAAAQAAgAAAAAAAIAAAA=")
tile_set = SubResource("TileSet_n4nhq")

[node name="playerCastle" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="enemyFactory" type="Node2D" parent="." node_paths=PackedStringArray("spawn_timer", "spawn_pool", "gameController", "pathGoal")]
script = ExtResource("14_4i2x0")
t1_enemy_pool = Array[Resource]([ExtResource("15_06qla"), ExtResource("16_m1bfk")])
enemy_scene = ExtResource("15_wdkll")
spawn_timer = NodePath("Timer")
spawn_pool = [NodePath("enemySpawn"), NodePath("enemySpawn2"), NodePath("enemySpawn3")]
gameController = NodePath("../gameController")
pathGoal = NodePath("../Goal")

[node name="enemySpawn" type="Marker2D" parent="enemyFactory"]
position = Vector2(-248, 1031)

[node name="enemySpawn2" type="Marker2D" parent="enemyFactory"]
position = Vector2(995, 1147)

[node name="enemySpawn3" type="Marker2D" parent="enemyFactory"]
position = Vector2(2179, 991)

[node name="Timer" type="Timer" parent="enemyFactory"]

[node name="playerFactory" type="Node2D" parent="." node_paths=PackedStringArray("game_controller")]
script = ExtResource("13_dbs7f")
player_scene = ExtResource("14_gym5g")
game_controller = NodePath("../gameController")
player_castle = ExtResource("20_m1bfk")

[node name="def_spawn" type="Marker2D" parent="playerFactory"]
position = Vector2(963, 192)

[node name="sec_spawn" type="Marker2D" parent="playerFactory"]
position = Vector2(1092, 148)

[node name="third_spawn" type="Marker2D" parent="playerFactory"]
position = Vector2(838, 148)

[node name="castle_spawn" type="Marker2D" parent="playerFactory"]
position = Vector2(949, -6)

[node name="projectileFactory" type="Node2D" parent="."]
script = ExtResource("15_cwx5i")

[node name="gameController" type="Node2D" parent="." node_paths=PackedStringArray("label", "state_timer", "enemy_factory", "upgradePanel", "upgradePool")]
script = ExtResource("2_4i2x0")
label = NodePath("Label")
state_timer = NodePath("Timer")
enemy_factory = NodePath("../enemyFactory")
upgradePanel = NodePath("upgradePanel")
levelUpScene = ExtResource("23_dbs7f")
upgradePool = NodePath("upgradePool")

[node name="upgradePool" type="Node2D" parent="gameController"]
script = ExtResource("23_841mk")
upgrade_pool = Array[Resource]([ExtResource("24_ao0ru"), ExtResource("26_16fx3")])
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="gameController"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 646.0
offset_top = -458.0
offset_right = 1231.0
offset_bottom = -389.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="gameController"]

[node name="upgradePanel" type="CanvasLayer" parent="gameController"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(969, 505)
zoom = Vector2(0.75, 0.75)
position_smoothing_enabled = true

[node name="Path1" type="NavigationRegion2D" parent="."]
position = Vector2(62, 33)
navigation_polygon = SubResource("NavigationPolygon_8fugj")
metadata/_edit_lock_ = true

[node name="Path3" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_6opfo")
metadata/_edit_lock_ = true

[node name="Goal" type="Node2D" parent="."]
position = Vector2(956, 136)

[node name="Area2D" type="Area2D" parent="Goal"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal/Area2D"]
position = Vector2(0, 16)
shape = SubResource("CircleShape2D_16fx3")
metadata/_edit_lock_ = true

[connection signal="timeout" from="enemyFactory/Timer" to="enemyFactory" method="_on_timer_timeout"]
[connection signal="timeout" from="gameController/Timer" to="gameController" method="_on_timer_timeout"]
